# models/post.go
@@ -1,0 +1,14 @@
+package models
+
+import (
+	"time"
+)
+
+type Post struct {
+	ID        string    `json:"id" db:"id"`
+	AuthorID  string    `json:"author_id" db:"author_id"`
+	Title     string    `json:"title" db:"title"`
+	Content   string    `json:"content" db:"content"`
+	CreatedAt time.Time `json:"created_at" db:"created_at"`
+	UpdatedAt time.Time `json:"updated_at" db:"updated_at"`
+}
